--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 
+{% block title %}Dogs Breeds Management System{% endblock %}
 {% block content %}
 	<h1>Welcome</h1>
 	This is the home page
