--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,14 @@
 		<link href="/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<ul class="nav navbar-nav">
+					<li><a class="navbar-brand" href="{{ app.url_generator.generate('home') }}"><span class="glyphicon glyphicon-home glyphicon-white"></span></a></li>
+					<li><a href="{{ app.url_generator.generate('dogs-browse') }}">Dogs List</a></li>
+				</ul>
+			</div>
+		</nav>
 		<div class="container">
 			<div class="row">
 				{% block content %}{% endblock %}
