--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -8,6 +8,9 @@
 				<th>ID</th>
 				<th>Breed</th>
 				<th>Hair Color</th>
+				<th>Is Barking</th>
+				<th>Is Hungry</th>
+				<th>Actions</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -16,6 +19,23 @@
 					<td>{{ oneDog.id }}</td>
 					<td>{{ oneDog.breed }}</td>
 					<td>{{ oneDog.hair_color }}</td>
+					<td>
+						{% if oneDog.is_barking %}
+							<span class="glyphicon glyphicon-ok glyphicon-white"></span>
+						{% else %}
+							<span class="glyphicon glyphicon-remove glyphicon-white"></span>
+						{% endif %}
+					</td>
+					<td>
+						{% if oneDog.is_hungry %}
+							<span class="glyphicon glyphicon-ok glyphicon-white"></span>
+						{% else %}
+							<span class="glyphicon glyphicon-remove glyphicon-white"></span>
+						{% endif %}
+					</td>
+					<td>
+						 <a href="{{ app.url_generator.generate('dogs-feed', {id: oneDog.id}) }}">Feed</a>
+					</td>
 				</tr>
 			{% endfor %}
 		</tbody>
