add the details page. Allow each subclass to have its own details to display additional information

--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -34,7 +34,8 @@
 						{% endif %}
 					</td>
 					<td>
-						 <a href="{{ app.url_generator.generate('dogs-feed', {id: oneDog.id}) }}">Feed</a>
+						<a href="{{ app.url_generator.generate('dogs-feed', {id: oneDog.id}) }}">Feed</a> | 
+						<a href="{{ app.url_generator.generate('dogs-details', {id: oneDog.id}) }}">Details</a>
 					</td>
 				</tr>
 			{% endfor %}
