--- a/templates/action.html
+++ b/templates/action.html
@@ -4,9 +4,10 @@
 {% block content %}
 	<div class="row">
 		{% if result %}
-			Action has been performed successfully
+			<h1>Action Has Been Performed Successfully</h1>
+			<p>We don't have data persistence, so the action will not have any effect in future requests</p> 
 		{% else %}
-			Action could not be performed<br/>
+			<h1>Action Could not be Performed</h1>
 			{{ errorMessage }}
 		{% endif %}
 	</div>
