--- a/templates/breeds/chihuahua.html
+++ b/templates/breeds/chihuahua.html
@@ -10,5 +10,13 @@
 				<span class="glyphicon glyphicon-remove glyphicon-white"></span>
 			{% endif %}
 		</div>
+		<div class="col-md-5">
+			<strong>Is Excited</strong><br/>
+			{% if dog.is_excited %}
+				<span class="glyphicon glyphicon-ok glyphicon-white"></span>
+			{% else %}
+				<span class="glyphicon glyphicon-remove glyphicon-white"></span>
+			{% endif %}
+		</div>
 	</div>
 {% endblock %}
