Add the README file, and create a folder for the test units

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,5 @@
 {% block title %}Dogs Breeds Management System{% endblock %}
 {% block content %}
 	<h1>Welcome</h1>
-	This is the home page
+	<pre>{{ contents }}</pre>
 {% endblock %}
